<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/techChallengeSubtitle"
        android:layout_width="241dp"
        android:layout_height="24dp"
        android:text="@string/TECH_CHALLENGE_SUBTITLE"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/techChallengeTitle"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/techChallengeTitle"
        android:layout_width="273dp"
        android:layout_height="47dp"
        android:text="@string/TECH_CHALLENGE_TITLE"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/requestSubreddit"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:text="@string/REQUEST_SUBREDDIT_TITLE"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/subredditUserInput"
        android:layout_width="192dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="@string/EDIT_TEXT_HINT"
        android:inputType="text"
        android:text="FlutterDev"
        android:visibility="visible"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requestSubreddit"
        app:layout_constraintVertical_bias="0.103" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="GetTypedSubreddit"
        android:text="@string/SUBMIT_BUTTON_TEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subredditUserInput"
        app:layout_constraintVertical_bias="0.172" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="311dp"
        android:layout_height="224dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/techChallengeSubtitle"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/fpf_tech_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>